@@ -6,8 +6,15 @@ bobcat (2.07.00)    ISN
   * DateTime's man-page contains a caveat for setMonth
   * Fswap's man-page BUGS section is augmented with a warning against swapping
     streams.
-  * Compiling cgi/push.cc and cgi/accept.cc conditionally on the g++
-    compiler's version (g++ >= or < version 4.4)
+  * Functions  cgi/push.cc and cgi/accept.cc >>require<< g++ version >= 4.4. 
+    Conditional compilation could also be used, like so:
+        #if __GNUC__ > 4 && __GNUC_MINOR__ >= 4
+        #then
+            static_cast<void (stack<char>::*)(char &&)>(&stack<char>::push));
+        #else
+                static_cast<void (stack<char>::*)(char const &)>(
+                                                        &stack<char>::push));
+        #endif
 
 bobcat (2.06.00)
 
